<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:gravity="end|bottom"
        android:hint="@string/TestView_name"
        android:textSize="50sp"
        android:background="@drawable/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/b_DEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/t1"
        android:layout_marginTop="50dp"
        android:text="@string/b_DEL"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/b_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/b_DEL"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/t1"
        android:text="@string/b_C"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_per"
        android:text="@string/b_per"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/b_C"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/t1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_div"
        android:text="@string/b_div"
        android:textSize="30sp"
        android:layout_toEndOf="@+id/b_per"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/t1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_7"
        android:text="@string/b7"
        android:textSize="30sp"
        android:layout_below="@+id/b_DEL"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_8"
        android:text="@string/b8"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_7"
        android:layout_alignTop="@id/b_7"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_9"
        android:text="@string/b9"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_8"
        android:layout_alignTop="@id/b_8"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_mul"
        android:text="@string/b_mul"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_9"
        android:layout_alignTop="@id/b_9"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_4"
        android:text="@string/b4"
        android:textSize="30sp"
        android:layout_below="@id/b_7"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_5"
        android:text="@string/b5"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_4"
        android:layout_alignTop="@id/b_4"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_6"
        android:text="@string/b6"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_5"
        android:layout_alignTop="@id/b_5"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_sub"
        android:text="@string/b_sub"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_6"
        android:layout_alignTop="@id/b_6"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_1"
        android:text="@string/b1"
        android:textSize="30sp"
        android:layout_below="@id/b_4"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_2"
        android:text="@string/b2"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_1"
        android:layout_alignTop="@id/b_1"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_3"
        android:text="@string/b3"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_2"
        android:layout_alignTop="@id/b_2"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_add"
        android:text="@string/b_add"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_3"
        android:layout_alignTop="@id/b_3"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/b_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_1"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@id/b_2"
        android:layout_alignLeft="@id/b_1"
        android:text="@string/b0"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_point"
        android:text="@string/b_point"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_0"
        android:layout_alignTop="@id/b_0"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_equals"
        android:text="@string/b_equals"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_point"
        android:layout_alignTop="@id/b_0"
        android:layout_marginStart="10dp"/>
</RelativeLayout>