<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="#ffffff"
    android:background="#000000"
    tools:context=".MainActivity_jinzhi">


    <TextView
        android:id="@+id/t2"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/b_C"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:hint="@string/TestView_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/b_a"
        android:layout_alignTop="@+id/t2"
        android:layout_marginStart="35dp"
        android:layout_marginTop="-3dp"
        android:hint="@string/TestView_name"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="50sp" />

    <Spinner
        android:id="@+id/s1"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:layout_below="@id/t2"
        android:layout_marginTop="24dp"
        android:background="#CCCCCC"
        android:entries="@array/spinnerName"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/s2"
        android:layout_width="107dp"
        android:layout_height="51dp"
        android:layout_below="@id/t3"
        android:layout_alignStart="@+id/t3"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:background="#CCCCCC"
        android:entries="@array/spinnerName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/change"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/s1"
        android:layout_marginStart="163dp"
        android:layout_marginTop="0dp"
        android:text="转换" />

    <Button
        android:id="@+id/b_C"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:background="#CCCCCC"
        android:text="@string/b_C"
        android:textSize="30sp" />

    <Button
        android:id="@+id/b_DEL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b_C"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/b_C"
        android:background="#CCCCCC"
        android:text="@string/b_DEL"
        android:textSize="30sp" />

    <Button
        android:id="@+id/b_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b_C"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/b_DEL"
        android:background="#FF9900"
        android:text="@string/a"
        android:textSize="30sp" />

    <Button
        android:id="@+id/b_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/b_a"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/b_a"
        android:background="#FF9900"
        android:text="@string/b"
        android:textSize="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_7"
        android:text="@string/b7"
        android:textSize="30sp"
        android:layout_below="@+id/b_C"
        android:layout_marginTop="15dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_8"
        android:text="@string/b8"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_7"
        android:layout_alignTop="@id/b_7"
        android:layout_marginStart="10dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_9"
        android:text="@string/b9"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_8"
        android:layout_alignTop="@id/b_8"
        android:layout_marginStart="10dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_c"
        android:text="@string/c"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_9"
        android:layout_alignTop="@id/b_9"
        android:layout_marginStart="10dp"
        android:background="#FF9900"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_4"
        android:text="@string/b4"
        android:textSize="30sp"
        android:layout_below="@id/b_7"
        android:layout_marginTop="15dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_5"
        android:text="@string/b5"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_4"
        android:layout_alignTop="@id/b_4"
        android:layout_marginStart="10dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/b_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b_5"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@id/b_5"
        android:text="@string/b6"
        android:textSize="30sp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_d"
        android:text="@string/d"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_6"
        android:layout_alignTop="@id/b_6"
        android:layout_marginStart="10dp"
        android:background="#FF9900"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_1"
        android:text="@string/b1"
        android:textSize="30sp"
        android:layout_below="@id/b_4"
        android:layout_marginTop="15dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_2"
        android:text="@string/b2"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_1"
        android:layout_alignTop="@id/b_1"
        android:layout_marginStart="10dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_3"
        android:text="@string/b3"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_2"
        android:layout_alignTop="@id/b_2"
        android:layout_marginStart="10dp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_e"
        android:text="@string/e"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_3"
        android:layout_alignTop="@id/b_3"
        android:layout_marginStart="10dp"
        android:background="#FF9900"/>

    <Button
        android:id="@+id/b_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_1"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@id/b_2"
        android:layout_alignStart="@id/b_1"
        android:text="@string/b0"
        android:textSize="30sp"
        android:background="#666666"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_return"
        android:text="@string/back"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_0"
        android:layout_alignTop="@id/b_0"
        android:layout_marginStart="10dp"
        android:background="#FF9900"
        android:textColor="#000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_f"
        android:text="@string/f"
        android:textSize="30sp"
        android:layout_toEndOf="@id/b_return"
        android:layout_alignTop="@id/b_0"
        android:layout_marginStart="10dp"
        android:background="#FF9900"/>
</RelativeLayout>